{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 114,
  "lineage": "a294cc13-f59b-9965-5700-c7525510c4f8",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "Hb_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/001c2e7e-e94e-4804-a374-ce90121a8c3a/resourceGroups/candidate/providers/Microsoft.Network/loadBalancers/Hb-load-balancer/frontendIPConfigurations/public-ip-config",
                "inbound_nat_rules": [
                  "/subscriptions/001c2e7e-e94e-4804-a374-ce90121a8c3a/resourceGroups/candidate/providers/Microsoft.Network/loadBalancers/Hb-load-balancer/inboundNatRules/hb-nat-rule"
                ],
                "load_balancer_rules": [
                  "/subscriptions/001c2e7e-e94e-4804-a374-ce90121a8c3a/resourceGroups/candidate/providers/Microsoft.Network/loadBalancers/Hb-load-balancer/loadBalancingRules/Hb-http-rule"
                ],
                "name": "public-ip-config",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/001c2e7e-e94e-4804-a374-ce90121a8c3a/resourceGroups/candidate/providers/Microsoft.Network/publicIPAddresses/Hb_public_ip"
              }
            ],
            "id": "/subscriptions/001c2e7e-e94e-4804-a374-ce90121a8c3a/resourceGroups/candidate/providers/Microsoft.Network/loadBalancers/Hb-load-balancer",
            "location": "southcentralus",
            "name": "Hb-load-balancer",
            "resource_group_name": "candidate",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "app": "interview",
              "team": "cloudops",
              "terraform": "true"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "hb_backend_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/001c2e7e-e94e-4804-a374-ce90121a8c3a/resourceGroups/candidate/providers/Microsoft.Network/networkInterfaces/Hb-vm-nic/ipConfigurations/Hb-vm"
            ],
            "id": "/subscriptions/001c2e7e-e94e-4804-a374-ce90121a8c3a/resourceGroups/candidate/providers/Microsoft.Network/loadBalancers/Hb-load-balancer/backendAddressPools/hb-backend",
            "load_balancing_rules": [
              "/subscriptions/001c2e7e-e94e-4804-a374-ce90121a8c3a/resourceGroups/candidate/providers/Microsoft.Network/loadBalancers/Hb-load-balancer/loadBalancingRules/Hb-http-rule"
            ],
            "loadbalancer_id": "/subscriptions/001c2e7e-e94e-4804-a374-ce90121a8c3a/resourceGroups/candidate/providers/Microsoft.Network/loadBalancers/Hb-load-balancer",
            "name": "hb-backend"
          },
          "dependencies": [
            "azurerm_lb.Hb_load_balancer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "hb-probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/001c2e7e-e94e-4804-a374-ce90121a8c3a/resourceGroups/candidate/providers/Microsoft.Network/loadBalancers/Hb-load-balancer/probes/hb-health-probe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/001c2e7e-e94e-4804-a374-ce90121a8c3a/resourceGroups/candidate/providers/Microsoft.Network/loadBalancers/Hb-load-balancer/loadBalancingRules/Hb-http-rule"
            ],
            "loadbalancer_id": "/subscriptions/001c2e7e-e94e-4804-a374-ce90121a8c3a/resourceGroups/candidate/providers/Microsoft.Network/loadBalancers/Hb-load-balancer",
            "name": "hb-health-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Http",
            "request_path": "/"
          },
          "dependencies": [
            "azurerm_lb.Hb_load_balancer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "Hb_http_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/001c2e7e-e94e-4804-a374-ce90121a8c3a/resourceGroups/candidate/providers/Microsoft.Network/loadBalancers/Hb-load-balancer/backendAddressPools/hb-backend"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/001c2e7e-e94e-4804-a374-ce90121a8c3a/resourceGroups/candidate/providers/Microsoft.Network/loadBalancers/Hb-load-balancer/frontendIPConfigurations/public-ip-config",
            "frontend_ip_configuration_name": "public-ip-config",
            "frontend_port": 80,
            "id": "/subscriptions/001c2e7e-e94e-4804-a374-ce90121a8c3a/resourceGroups/candidate/providers/Microsoft.Network/loadBalancers/Hb-load-balancer/loadBalancingRules/Hb-http-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/001c2e7e-e94e-4804-a374-ce90121a8c3a/resourceGroups/candidate/providers/Microsoft.Network/loadBalancers/Hb-load-balancer",
            "name": "Hb-http-rule",
            "probe_id": "/subscriptions/001c2e7e-e94e-4804-a374-ce90121a8c3a/resourceGroups/candidate/providers/Microsoft.Network/loadBalancers/Hb-load-balancer/probes/hb-health-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.Hb_load_balancer",
            "azurerm_lb_probe.hb-probe"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "Candidate_Route_Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/001c2e7e-e94e-4804-a374-ce90121a8c3a/resourceGroups/candidate/providers/Microsoft.Network/routeTables/Healthcare_bluebook_route_table",
            "location": "southcentralus",
            "name": "Healthcare_bluebook_route_table",
            "resource_group_name": "candidate",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "Internet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              }
            ],
            "subnets": [
              "/subscriptions/001c2e7e-e94e-4804-a374-ce90121a8c3a/resourceGroups/candidate/providers/Microsoft.Network/virtualNetworks/Healthcare_bluebook_network/subnets/Healthcare_bluebook_subnet"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d777046b-133a-4079-bac6-1ad918b12cbc",
            "id": "/subscriptions/001c2e7e-e94e-4804-a374-ce90121a8c3a/resourceGroups/candidate/providers/Microsoft.Network/virtualNetworks/Healthcare_bluebook_network",
            "location": "southcentralus",
            "name": "Healthcare_bluebook_network",
            "resource_group_name": "candidate",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/001c2e7e-e94e-4804-a374-ce90121a8c3a/resourceGroups/candidate/providers/Microsoft.Network/virtualNetworks/Healthcare_bluebook_network/subnets/Healthcare_bluebook_subnet",
                "name": "Healthcare_bluebook_subnet",
                "security_group": "/subscriptions/001c2e7e-e94e-4804-a374-ce90121a8c3a/resourceGroups/candidate/providers/Microsoft.Network/networkSecurityGroups/nsg-Hb-nsg"
              }
            ],
            "tags": {
              "app": "interview",
              "team": "cloudops",
              "terraform": "true",
              "type": "network"
            }
          }
        }
      ]
    },
    {
      "module": "module.network-security-group",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/001c2e7e-e94e-4804-a374-ce90121a8c3a/resourceGroups/candidate/providers/Microsoft.Network/networkSecurityGroups/nsg-Hb-nsg",
            "location": "southcentralus",
            "name": "nsg-Hb-nsg",
            "resource_group_name": "candidate",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Allow HTTP traffic",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-http",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow HTTPS traffic",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-https",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "app": "interview",
              "team": "cloudops",
              "terraform": "true",
              "type": "network"
            },
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.public-ip",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "myhealthcarebluebook",
            "fqdn": "myhealthcarebluebook.southcentralus.cloudapp.azure.com",
            "id": "/subscriptions/001c2e7e-e94e-4804-a374-ce90121a8c3a/resourceGroups/candidate/providers/Microsoft.Network/publicIPAddresses/Hb_public_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.183.233.74",
            "ip_version": "IPv4",
            "location": "southcentralus",
            "name": "Hb_public_ip",
            "resource_group_name": "candidate",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "app": "interview",
              "team": "cloudops",
              "terraform": "true",
              "type": "ip"
            },
            "zones": [
              "1",
              "2",
              "3"
            ]
          }
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/001c2e7e-e94e-4804-a374-ce90121a8c3a/resourceGroups/candidate/providers/Microsoft.Network/virtualNetworks/Healthcare_bluebook_network/subnets/Healthcare_bluebook_subnet",
            "name": "Healthcare_bluebook_subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "candidate",
            "virtual_network_name": "Healthcare_bluebook_network"
          }
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/001c2e7e-e94e-4804-a374-ce90121a8c3a/resourceGroups/candidate/providers/Microsoft.Network/virtualNetworks/Healthcare_bluebook_network/subnets/Healthcare_bluebook_subnet",
            "route_table_id": "/subscriptions/001c2e7e-e94e-4804-a374-ce90121a8c3a/resourceGroups/candidate/providers/Microsoft.Network/routeTables/Healthcare_bluebook_route_table",
            "subnet_id": "/subscriptions/001c2e7e-e94e-4804-a374-ce90121a8c3a/resourceGroups/candidate/providers/Microsoft.Network/virtualNetworks/Healthcare_bluebook_network/subnets/Healthcare_bluebook_subnet"
          },
          "dependencies": [
            "module.subnet.azurerm_subnet.main"
          ]
        }
      ]
    },
    {
      "module": "module.vm-linux",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/001c2e7e-e94e-4804-a374-ce90121a8c3a/resourceGroups/candidate/providers/Microsoft.Network/networkInterfaces/Hb-vm-nic",
            "internal_domain_name_suffix": "nmchpvz0cn2ubowgdlmrrmjmxe.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Hb-vm",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/001c2e7e-e94e-4804-a374-ce90121a8c3a/resourceGroups/candidate/providers/Microsoft.Network/virtualNetworks/Healthcare_bluebook_network/subnets/Healthcare_bluebook_subnet"
              }
            ],
            "location": "southcentralus",
            "mac_address": "60-45-BD-E3-71-B4",
            "name": "Hb-vm-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "candidate",
            "tags": {
              "app": "interview",
              "team": "cloudops",
              "terraform": "true",
              "type": "vm"
            },
            "virtual_machine_id": "/subscriptions/001c2e7e-e94e-4804-a374-ce90121a8c3a/resourceGroups/candidate/providers/Microsoft.Compute/virtualMachines/Hb-vm"
          }
        }
      ]
    }
  ]
}